Fixed Height of landing page as well footer. Removed overflow to contain landing page in place. -WS, JC, AS, JXC

--- a/scrumptious-coffee/src/components/footer/Footer.css
+++ b/scrumptious-coffee/src/components/footer/Footer.css
@@ -3,6 +3,7 @@
   padding: 1rem;
   color: white;
   font-size: .75rem;
+  height: 7vh;
 }
 
 .footer-row {
